# ask-ara-plus

./: .dockerignore  .gitignore  Dockerfile  README.md  backend.Dockerfile  docker-compose.yml  start.sh
backend/: Dockerfile  agent.py  db.py  llm_client.py  mcp_server.py  pyproject.toml  requirements.txt  server.py
backend/prompts/: simplify_v1.txt  system_prompt.txt
backend/tools/: __init__.py  complexity.py  dialect.py  language.py  portal.py  profiler.py  scanner.py  search.py  simplify.py  speech.py  summarize.py  translate.py
data/documents/: ASEAN_3.-March-2018-ASEAN-Consensus-on-the-Protection-and-Promotion-of-the-Rights-of-Migrant-Workers.meta.json  ASEAN_3.-March-2018-ASEAN-Consensus-on-the-Protection-and-Promotion-of-the-Rights-of-Migrant-Workers.txt  ASEAN_ASEAN_Declaration_on_the_Protection_of_Migrant_Workers_Family_Members-in-Crisis-Situation-and-its-Guidelines.meta.json  ASEAN_ASEAN_Declaration_on_the_Protection_of_Migrant_Workers_Family_Members-in-Crisis-Situation-and-its-Guidelines.txt  ID_BLT_Kemensos_2026_-_Syarat_dan_Ketentuan_Lengkap.meta.json  ID_BLT_Kemensos_2026_-_Syarat_dan_Ketentuan_Lengkap.txt  ID_BPJS_Kesehatan.meta.json  ID_BPJS_Kesehatan.txt  ID_KETENAGAKERJAAN_peraturan_file_13.meta.json  ID_KETENAGAKERJAAN_peraturan_file_13.txt  ID_Manual-Book-SP4N-Lapor.meta.json  ID_Manual-Book-SP4N-Lapor.txt  ID_Panduan_Perizinan_Berusaha_Risiko_Rendah_untuk_Usaha_Mikro_Kecil_(UMK).meta.json  ID_Panduan_Perizinan_Berusaha_Risiko_Rendah_untuk_Usaha_Mikro_Kecil_(UMK).txt  ID_Permenkes_Nomor_28_Tahun_2014.meta.json  ID_UU_Nomor_24_Tahun_2007.meta.json  (+69 more)
(+12 files in other folders)
