[project]
name = "askara"
version = "0.1.0"
description = "AskAra+ — Multilingual ASEAN Government Services Assistant"
requires-python = ">=3.11,<3.14"

dependencies = [
    # --- Core Backend ---
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    # --- LLM / Agent ---
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    # "langchain-mcp-adapters",  # uncomment when wiring agent <> MCP
    "fastmcp>=2.0.0,<3.0.0",
    # --- ChromaDB + Embeddings ---
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    # --- Document Processing ---
    "PyMuPDF>=1.24.0",            # fitz — PDF text extraction
    "httpx>=0.28.1",
    "langchain-openai>=0.3.0",
    "langchain-mcp>=0.2.1",
    "langgraph>=0.3.0",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
    "langchain-core>=0.3.30",
    "langdetect>=1.0.9",
    "pytesseract>=0.3.13",
    "tesseract>=0.1.3",
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.11.3",
    "edge-tts>=7.2.7",
]

[project.optional-dependencies]
nlp = [
    "langdetect>=1.0.9",
    "transformers>=4.40.0",       # for NLLB translation model (Day 4+)
]
